# gentoo-stages

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: download.rs  list.rs
plan/: refactor-all.md
src/: cache.rs  client.rs  error.rs  lib.rs  models.rs  stage3.rs
