[package]
name = "gentoo-stages"
version = "0.1.0"
edition = "2021"
rust-version = "1.71.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "Gentoo stage3 image fetching and management for Rust applications"
repository = "https://github.com/lu-zero/gentoo-stages"
keywords = ["gentoo", "stages", "stage3", "cross-compilation"]
categories = ["development-tools", "os::unix-apis"]

[dependencies]
gentoo-core = { path = "../gentoo-core" }
thiserror = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"
env_logger = "0.10"

[features]
default = []
serde_support = ["serde", "gentoo-core/serde_support"]

[profile.release]
opt-level = 3
lto = true

[[example]]
name = "list_stages"
path = "examples/list.rs"

[[example]]
name = "download_stage"
path = "examples/download.rs"
