[package]
name = "gentoo-stages"
version = "0.3.0"
edition = "2021"
rust-version = "1.88.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "Gentoo stage3 image support"
repository = "https://github.com/lu-zero/gentoo-stages"
keywords = ["gentoo", "stages", "stage3", "cross-compilation"]
categories = ["development-tools"]

[dependencies]
gentoo-core = "0.3.1"
thiserror = "2.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
tempfile = "3"
reqwest = { version = "0.13", features = ["rustls", "stream"] }
bon = "3"
tokio = { version = "1.0", features = ["fs", "io-util"] }
futures = "0.3"

[dev-dependencies]
serde_json = "1.0"
env_logger = "0.11"
tokio = { version = "1.0", features = ["full"] }  # For examples and tests

[features]
default = []
serde = ["dep:serde", "gentoo-core/serde"]

[profile.release]
opt-level = 3
lto = true

